2009-03-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_fundamental_type_from_obj): Check the SV for
	definedness before passing it to SvRV.  This fixes a test failure
	on MSWin32 in t/c.t.

2009-03-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/filename.t: Add more tests for Glib::filename_to_uri.  Patch
	by Kevin Ryde.

2009-02-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs
	* GType.xs: Fix errors reported by podchecker.

2009-02-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Tell the CPAN indexer to ignore the package 'MY'
	used by Glib::MakeHelper.

2009-02-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GenPod.pm (xsdoc2pod): Instead of relying on one final '=cut',
	close every opened POD paragraph separately.  This fixes POD
	errors that occurred when '=for position COPYRIGHT' was used.
	Original patch by Ryan Niebur.

2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBookmarkFile.xs: Don't document Glib::BookmarkFile::set_added,
	set_modified, and set_visited as functions; they're methods.

	* t/h.t: Test Glib::BookmarkFile::set_added, set_modified, and
	set_visited and their associated getters.

2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm: Use an '=encoding utf8' directive for the AUTHORS POD
	section so that non-ASCII characters are handled correctly.

2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.213.

2009-02-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GError.xs: Document that Glib::Error->location returns raw
	bytes.  Patch by Kevin Ryde.

2009-02-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm: In the documentation for filename_from_uri, hint at
	path separator issue.  Patch by Kevin Ryde.

2009-02-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GOption.xs (copy_string): Fix C99-ism.  Patch by Kevin Ryde.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>
